--- a/Heart Disease Prediction using Machine Learning/end-to-end-heart-disease-classification.ipynb
+++ b/Heart Disease Prediction using Machine Learning/end-to-end-heart-disease-classification.ipynb
@@ -260,7 +260,7 @@
         }
       ],
       "source": [
-        "df = pd.read_csv(r\"C:\\\\Users\\\\Neel Arora\\\\Downloads\\\\heart.csv\",encoding='unicode_escape')\n",
+        "df = pd.read_csv(r\"C:\\Users\\Neel Arora\\OneDrive\\Desktop\\Additional Project\\Heart Disease Prediction using Machine Learning\\heart.csv\",encoding='unicode_escape')\n",
         "df.shape"
       ]
     },
